<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/main_top_header"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_below="@id/main_top_layout"
        android:layout_alignParentStart="true"
        android:layout_marginTop="0dp"
        android:background="@color/deepskyblue">


        <TextView
            android:id="@+id/item_mainlv_top_tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_mainlv_top_tv_out"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-5dp"
            android:layout_marginRight="20dp"
            android:text="@string/month_out"
            android:textColor="@color/black"
            android:textSize="23dp" />

        <TextView
            android:id="@+id/item_mainlv_top_tv_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_mainlv_top_tv3"
            android:layout_alignParentRight="true"
            android:layout_marginTop="140dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="10dp"
            android:text="0"
            android:textColor="@color/design_default_color_error"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/item_mainlv_top_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_mainlv_top_tv_in"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="-5dp"
            android:text="@string/month_in"
            android:textColor="@color/black"
            android:textSize="23dp" />

        <TextView
            android:id="@+id/item_mainlv_top_tv_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_mainlv_top_tv3"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="140dp"
            android:layout_marginBottom="10dp"
            android:text="0"
            android:textColor="@color/green_006400"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/item_mainlv_top_tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="105dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="2dp"
            android:text="@string/budget"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_mainlv_top_tv_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_mainlv_top_tv3"
            android:layout_centerHorizontal="true"
            android:background="@color/none"
            android:onClick="onClick"
            android:text="  0"
            android:textColor="@color/design_default_color_error"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/item_mainlv_top_tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_mainlv_top_tv2"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="-66dp"
            android:layout_marginEnd="144dp"
            android:drawableLeft="@mipmap/ih_biaoge"
            android:gravity="center"
            android:text="@string/see_excel"
            android:textColor="@color/green_006400" />


    </RelativeLayout>

    <TextView
        android:id="@+id/item_mainlv_top_tv_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/white"
        android:text="今日支出:￥0       今日收入:￥0"
        android:textSize="15sp"
        android:textStyle="bold" />
</LinearLayout>